tests/test_assets/semantic/invalid/enums/constant_type_mismatch.cog
Color :: enum(u16) {
    Red,
    Green,
    Blue,
}

BAD_COLOR_CONST: Color : 1;