tests/test_assets/semantic/invalid/enums/constant_type_mismatch.expected
semantic error at line 7: constant value does not match declared type
1 semantic error generated.
